--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div id="page-top" class="index">
-  <nav class="navbar navbar-inverse  ">
+  <nav class="navbar navbar-inverse navbar-fixed-top ">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
@@ -29,7 +29,7 @@
           <li><a class="page-scroll" href="#services">Services</a></li>
           <li><a class="page-scroll" href="#port">Our Product</a></li>
           <li><a class="page-scroll" href="#about">About</a></li>
-          <li><a class="page-scroll" href="#team">Branches</a></li>
+          <!-- <li><a class="page-scroll" href="#team">Branches</a></li> -->
           <li><a class="page-scroll" href="#contact">Contact</a></li>
         </ul>
         <a href="#services" class="page-scroll btn btn-primary start pull-right">Get Started</a>
@@ -108,7 +108,8 @@
             <div class="card" >
                <img class="card-img-top" src="assets/img/taxi.jpg" alt="Card image cap">
                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               	  <h3>INO-AUTO</h3>
+                  <p class="card-text">book cabs nearby your location for best fares. For best taxi ... The all too familiar auto ride, minus the hassle of waiting and haggling for price</p>
                </div>
             </div>
          </div>
@@ -116,7 +117,8 @@
             <div class="card" style="">
                <img class="card-img-top" src="assets/img/news.jpg" alt="Card image cap">
                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               	  <h3>INTHU NAMMA OORU-KAYAL</h3>
+                  <p class="card-text">Kayalpatnam Updates Quickly and blood donate use the this app</p>
                </div>
             </div>
          </div>
@@ -142,7 +144,7 @@
                 <h4 class="subheading" style="color:#3680C1">Recharge Services</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                <p class="text-muted">Government Technology Services and with a flat design to provide easier access to Isle of Man Government services. All Goverment Bill Paying</p>
               </div>
             </div>
           </li>
@@ -154,7 +156,7 @@
                 <h4 class="subheading" style="color:#3680C1">RSU Travels</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                <p class="text-muted">Delivering the lowest air fares with the highest consumer value, to price sensitive consumers.We hope to fulfill everyone’s dream of flying!</p>
               </div>
             </div>
           </li>
@@ -166,7 +168,7 @@
                 <h4 class="subheading" style="color:#3680C1">Computer Service</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                <p class="text-muted">Our professionals are skilled and can install software and hardware on your system and make it more powerful. They can enhance the speed of your computer easily. You can talk to our task force of professionals and seek advice from them.</p>
               </div>
             </div>
           </li>
@@ -178,7 +180,7 @@
                 <h4 class="subheading" style="color:#3680C1">Bulk/Wholesale Purchase</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged! 
+                <p class="text-muted">the purchase of the whole or greater part of the output of a commodity of a country or state by a single buyer, usually another country or state; state trading. Contemporary definitions for bulk buying. noun. to purchase goods in large quantities, esp. at a warehouse or discount store. 
               </div>
             </div>
           </li>
@@ -290,9 +292,9 @@
       <div class="col-md-4"></div>
       <div class="col-md-4 col-md-offset-">
         <ul class="list-inline social-buttons">
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="twitter.com"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="fb.com"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="instagram.com"><i class="fa fa-linkedin"></i></a></li>
         </ul>
       </div>
       <div class="col-md-4"></div>
